rust/macros/tests/invalid/target/debug/deps/only_comma_rs-fcf9be06c9e6b1f2.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libonly_comma_rs-fcf9be06c9e6b1f2.rmeta: only-comma.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/only_comma_rs-fcf9be06c9e6b1f2.d: only-comma.rs Cargo.toml

only-comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
